# Adapted from https://github.com/pybind/cmake_example/blob/master/pyproject.toml
[build-system]
requires = ["setuptools>=42", "wheel", "ninja", "cmake>=3.12"]
build-backend = "setuptools.build_meta"

[tool.mypy]
files = "setup.py"
python_version = "3.8"
strict = true
show_error_codes = true
enable_error_code = ["ignore-without-code", "redundant-expr", "truthy-bool"]
warn_unreachable = true

[[tool.mypy.overrides]]
module = ["ninja"]
ignore_missing_imports = true

[tool.cibuildwheel]
before-build = "rm -rf {project}/build"

[tool.ruff]
target-version = "py38"

[tool.ruff.lint]
extend-select = [
    "B",   # flake8-bugbear
    "I",   # isort
    "PGH", # pygrep-hooks
    "RUF", # Ruff-specific
    "UP",  # pyupgrade
]
